--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,9 @@
 {
     "name": "omer/contact",
     "description": "Magento 2 module improve contact us module",
+    "require": {
+        "magento/module-contact": ">=100.1.*"
+    },
     "type": "magento2-module",
     "version": "1.0.0",
     "license": "OSL-3.0",
