--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "omer/contact",
     "description": "Magento 2 module improve contact us module",
     "require": {
-        "magento/module-contact": ">=100.1.*"
+        "magento/module-contact": ">=100.1.0"
     },
     "type": "magento2-module",
     "version": "1.0.0",
